# cli-python

./: LICENSE  README.md  pyproject.toml
aisec_cli/: __init__.py  main.py
