[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aisec"
version = "0.1.0"
description = "CLI client for aisec — AI-driven autonomous penetration testing"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "stuseek" },
]
keywords = ["security", "pentesting", "ai", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests>=2.28",
    "rich>=13.0",
    "websocket-client>=1.6",
]

[project.scripts]
aisec = "aisec_cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["aisec_cli"]

[project.urls]
Homepage = "https://github.com/aisec-foundation/cli-python"
Repository = "https://github.com/aisec-foundation/cli-python"
